# licenciaminer

./: .env.example  .gitattributes  .gitignore  .railwayignore  CLAUDE.md  CLAUDE_CODE_KICKOFF.md  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt
.streamlit/: config.toml
api/: main.py
api/routers/: chat.py  concessoes.py  copam.py  decisions.py  due_diligence.py  empresa.py  explorer.py  geospatial.py  intelligence.py  overview.py  prospeccao.py  reports.py  simulator.py
api/services/: database.py
app/: app.py
app/components/: data_loader.py  dd_inventory.py  dd_scoring.py  mining_simulator.py  report_data.py  report_generator.py
app/pages/: 1_visao_geral.py  1_visão_geral.py  (+20 more)
docs/: DATA_REGISTRY.md  SESSION_HANDOFF.md
plans/: audit-app-integrity-assessment.md  backlog-future-improvements.md  feat-bootstrap-licenciaminer-phase1.md  feat-full-streamlit-to-nextjs-migration.md  feat-inteligencia-comercial-redesign.md  feat-licensing-decision-analysis-dashboard.md  feat-mineradora-modelo-ai-revamp.md  feat-mining-concessions-prospecting.md  feat-next-steps-roadmap.md  feat-pdf-report-generator.md  feat-product-app-final.md  feat-product-app-mvp.md  feat-streamlit-parity-next.md  fix-app-stabilization-deep-review.md  product-layer.md  refactor-information-architecture.md  review-all-tabs-ux.md  sprint2-enrichment-collectors.md
tests/: conftest.py  test_analysis.py  test_anm.py  test_anm_scm.py  test_cli.py  test_ibama.py  test_mg_semad.py  test_normalize.py
web/: CHANGELOG.md  README.md  components.json  package-lock.json  package.json
(+118 files in other folders)
