[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "licenciaminer"
version = "0.1.0"
description = "Base analítica de licenciamento ambiental minerário no Brasil"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "duckdb>=1.2",
    "httpx>=0.27",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "openpyxl>=3.1",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.27.2.2",
    "geopandas>=1.1.3",
    "shapely>=2.1.2",
    "streamlit>=1.55.0",
    "plotly>=6.6.0",
    "fpdf2>=2.8.7",
    "anthropic>=0.86.0",
    "folium>=0.15",
    "streamlit-folium>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
    "mypy>=1.13",
    "pandas-stubs>=2.2",
]

[project.scripts]
licenciaminer = "licenciaminer.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/licenciaminer"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []

[[tool.mypy.overrides]]
module = ["duckdb", "openpyxl", "pymupdf", "geopandas", "geopandas.*", "pyogrio", "shapely"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["licenciaminer.collectors.spatial"]
disable_error_code = ["attr-defined", "name-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
